# udm-backup

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  config.sample.json  pyproject.toml
bdp/udmbackup/: __init__.py  __main__.py  backup.py  config.schema.json
